--- a/index.html
+++ b/index.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>sticky notes</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
-    <h1 class="bg-red-500">hello</h1>
+    <div class="bg-yellow-200 h-dvh p-10 flex flex-col justify-between">
+      <div
+        class="flex gap-2 flex-wrap bg-blue-500 p-10"
+        id="listContainer"
+      ></div>
+      <div
+        class="border w-full h-fit flex justify-between p-2 sm:p-10 sm:gap-x-8"
+      >
+        <input type="text" class="w-full bg-black text-white" />
+        <button class="bg-green-300 text-xl px-4 text-white" id="addButton">
+          Add
+        </button>
+      </div>
+    </div>
   </body>
   <script src="./index.js"></script>
 </html>
